fix(form): Catch "unsupported" left-aligned checkbox label markup (#3639)
* Catch left checkbox label with unsupported markup

* Add release notes

--- a/ui/components/form-element/horizontal/_index.scss
+++ b/ui/components/form-element/horizontal/_index.scss
@@ -96,6 +96,7 @@
       .slds-form-element__label {
         position: relative;
         float: none;
+        max-width: 100%;
         width: auto;
       }
     }
